targeted parent element for swipe motion, index.scss targeted html and body and hid overflow to prevent movement during swipe, topmenu endtouch added e.preventdefault to prevent background movement from swipe

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @use './styles/main.scss' as styles;
 
+html, body {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
